--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,6 +56,7 @@ code {
         border: none;
         font-weight: bold;
         padding: 10px;
+        border-radius: 5px;
       }
       label {
         display: flex;
