--- a/src/styles.scss
+++ b/src/styles.scss
@@ -93,8 +93,48 @@ code {
 
       .sidebar{
         flex: 1;
-        border-right: 1px solid #999;
         background-color: #333;
+
+        .navbar {
+          display: flex;
+          align-items: center;
+          background-color: red;
+          padding: 10px;
+          height: 50px;
+          justify-content: space-between;
+          color: #FFF;
+
+          .logo {
+            font-weight: bold;
+          }
+
+          .user {
+            display: flex;
+            gap: 10px;
+
+            img {
+              background-color: red;
+              height: 20px;
+              width: 20px;
+              border-radius: 50%;
+              object-fit: cover;
+              border: 2px solid #FFF;
+            }
+
+            button {
+              background-color: #333;
+              border-radius: 1px;
+              color: #FFF;
+              font-size: 10px;
+              border: none;
+              cursor: pointer;
+            }
+            button:hover {
+              opacity: 0.8;
+              transition-duration: 0.5s;
+            }
+          }
+        }
       }
       .chat {
         flex: 2
