--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,13 +47,17 @@ $darkcolor: '#999';
     align-items: center;
 
     .logo {
-      color: #5d5b8b;
+      color: red;
       font-weight: bold;
       font-size: 24px;
+      text-align: center;
     }
 
     .title {
-      font-size: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 14px;
     }
 
     form {
